fixed responsiveness of learnings and neuroplex

--- a/neuroplex.html
+++ b/neuroplex.html
@@ -51,6 +51,7 @@
 
 <body>
   <div class="container"id="nplogo">
+
    <div class="row">
     <div class="col-md-10">
       <p><h1 class="text-center">About Neuroplex</h1></p>
@@ -59,21 +60,22 @@
 
 
   <div class="row" id="nptext">
-    <div class="col-sm-12">
-     <div class="media">
-       <div class="media-body">
+    <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">     
+       
     <!--h4 class="media-heading">John Doe</h4-->
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
       </div>
-  <div class="media-right"id="cofounder-pic">
-    <img src="assets/neuroplex2.png" class="media-object" style="width:250px">
+
+  <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4">
+    <img src="assets/neuroplex2.png" class="mx-auto d-block" style="width:250px">
   </div>
+
 
 </div>
 </div>
-</div>
-</div>
+
+
 
 <div class="container" id="buttt">
 <div class="row text-center">
