--- a/learnings.html
+++ b/learnings.html
@@ -53,60 +53,55 @@
 
 
   <div class="row" id="nazar">
-    <div class="col-sm-12">
-     <div class="media">
-       <div class="media-body">
+    <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">     
+       
     <!--h4 class="media-heading">John Doe</h4-->
         <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
       </div>
-  <div class="media-right media-top"id="nazar-pic">
+  <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
     <img src="assets/nazar.png" class="media-object" style="width:200px">
   </div>
 
 </div>
 </div>
-</div>
-</div>
+
 
 
 <!--Jumbotron Part coming-->
 
 <div class="jumbotron jumbotron-fluid bg-dark"id="validation">
   <div class="container">
-    <div class="row" id="nazar">
-    <div class="col-sm-12">
-     <div class="media">
 
-      <div class="media-left" id="npteam">
-        <img src="assets/pongala.jpg" class="media-object" style="width:300px">
+
+    <div class="row" id="nazar">
+    <div class="col-xl-4 lg-4">
+           <!--div class="media-left" id="npteam"-->
+        <img src="assets/pongala.jpg" class="media-object" style="width:350px">
       </div>
 
-       <div class="media-body">
+       <div class="col-xl-8 lg-8">
     <!--h4 class="media-heading">John Doe</h4-->
         <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
       </div>
   </div>
-  </div>
-</div>
+ 
 
 <div class="row" id="nazar">
-    <div class="col-sm-12">
-     <div class="media">
+    <div class="col-xl-4">     
 
-      <div class="media-left" id="npteam">
-        <img src="assets/pump.jpg" class="media-object" style="width:300px">
+      <!--div class="media-left" id="npteam"-->
+        <img src="assets/pump.jpg" style="width:350px">
       </div>
 
-       <div class="media-body">
+       <div class="col-xl-8">
     <!--h4 class="media-heading">John Doe</h4-->
         <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-      </div>
+      </div>  
   </div>
-  </div>
-</div>
+
 
 
 </div>
