--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
 
-  <title>nbt site</title>
+  <title>Savio Victor</title>
   <style>
     #right {
       margin-top: 0%;
@@ -64,7 +64,7 @@ senectus et netus et malesuada fames ac turpis egestas
           <button class ="btn btn-dark btn-lg mr-3">Treks</button>
           <button class ="btn btn-dark btn-lg mr-3">Books</button>
           <button class ="btn btn-dark btn-lg mr-3">My Story</button>
-          <button class ="btn btn-dark btn-lg ">Neuroplex</button>
+          <button class ="btn btn-dark btn-lg mr-3">Neuroplex</button>
         </div>
       </div>
 
