--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     }
     #butt
     {
-      padding-left:20%;
+      padding-left:1%;
     }
   </style>
 </head>
@@ -37,14 +37,14 @@
     <!--#################START HERE#####################-->
     
       <div class="row">
-      <div class =col-md-6 >
+      <div class ="col-md-6">
 
         <img src="nbt4.jpg" class="img-fluid">
       <!--img src="nbt2.jpg" class="img-thumbnail" height="200" width="200"-->      
         </div>
 
              
-       <div class=col-md-6> 
+       <div class="col-md-6"> 
 
           <div class="container"id="jumbo">
             <div class="jumbotron">
@@ -59,13 +59,13 @@ senectus et netus et malesuada fames ac turpis egestas
             </div>
           </div>
         <div class="container" id="butt">
-          <div class=row>
-            <div class=col-sm-10>
-          <button class ="btn btn-dark btn-lg mr-3">Treks</button>
-          <button class ="btn btn-dark btn-lg mr-3">Books</button>
-          <button class ="btn btn-dark btn-lg mr-3">My Story</button>
-          <button class ="btn btn-dark btn-lg mr-3">Neuroplex</button>
-        </div>
+          <div class="row justify-content-center">
+            <!--div class=col-xl-6-->
+          <button class ="btn btn-dark btn-lg mr-3 mt-3">Treks</button>
+          <button class ="btn btn-dark btn-lg mr-3 mt-3">Books</button>
+          <button class ="btn btn-dark btn-lg mr-3 mt-3">My Story</button>
+          <button class ="btn btn-dark btn-lg mr-3 mt-3">Neuroplex</button>
+        <!--/div-->
       </div>
 
 
