put linkings in three pages, no linking present to navigate back

--- a/neuroplex.html
+++ b/neuroplex.html
@@ -80,8 +80,11 @@
 <div class="container" id="buttt">
 <div class="row text-center">
   <div class="col-sm-12">
-    <button class ="btn btn-dark btn-lg mr-3">Journey</button>
-    <button class ="btn btn-dark btn-lg mr-3">Learnings</button>
+    <!--button class ="btn btn-dark btn-lg mr-3">Journey</button-->
+    <a href="journey2.html" class="btn btn-dark btn-lg mr-3" role="button">Journey</a>
+
+    <!--button class ="btn btn-dark btn-lg mr-3">Learnings</button-->
+    <a href="learnings.html" class="btn btn-dark btn-lg mr-3" role="button">Learnings</a>
   </div>
 </div>
 </div>
