--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@ senectus et netus et malesuada fames ac turpis egestas
           <button class ="btn btn-dark btn-lg mr-3 mt-3">Treks</button>
           <button class ="btn btn-dark btn-lg mr-3 mt-3">Books</button>
           <button class ="btn btn-dark btn-lg mr-3 mt-3">My Story</button>
-          <button class ="btn btn-dark btn-lg mr-3 mt-3">Neuroplex</button>
+          <!--button class ="btn btn-dark btn-lg mr-3 mt-3">Neuroplex</button-->
+          <a href="neuroplex.html" class="btn btn-dark btn-lg mr-3 mt-3" role="button">Neuroplex</a>
+
         <!--/div-->
       </div>
 
