added content for the first time still needs a lot of refining

--- a/journey2.html
+++ b/journey2.html
@@ -61,8 +61,13 @@
      
        
     <!--h4 class="media-heading">John Doe</h4-->
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <p>I co-founded Neuroplex with Pranoy whom I knew from my college. One of those things which are understated while starting up is the importance of the early team. Pranoy and I were fortunate enough to have good dynamics which enabled us to make it so far.</p>
+
+        <p>  
+
+A major challenge we faced in the early days was figuring out how to build a product business out of a Tier 2 city in India and that too directly after college.
+
+We had explored 2 different use-cases which we learnt wouldn’t work and finally pivoted to what finally became our product.</p>
       </div>
   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
     <img src="assets/cofounder.jpg"  style="width:350px">
@@ -85,7 +90,12 @@
     </div>
 
       <div class="col-xl-4">
-      <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>      
+      <p class="text-white">We gained momentum in our journey when 2 events happened : </p>
+<p class= "text-white">
+1. We won CODESEC - a hackathon conducted by Kerala Police Cyberdome. This gave us some early inputs in validating our idea, and we also entered into a partnership with Cyberdome which helped us in developing our computer vision algorithms by testing it in real world scenarios and were able to get direct feedback from the Police Department.</p>
+
+<p class= "text-white">
+2. We were awarded A Work Order from IOCL after we were selected as one out of the thirteen startups from across 1300 applications in their 2’nd IOCL Startup Funding Round. *Specify year*</p>      
     </div>
 
      <div class="col-xl-4">
@@ -107,8 +117,8 @@
 
        <div class="col-xl-8">
     <!--h4 class="media-heading">John Doe</h4-->
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <p>Our biggest asset that we had at Neuroplex was the team that we had at Neuroplex. </p>
+          <p>We had incubated at Future Technologies Lab an R&D Facility of KSUM in Technopark, Trivandrum. Being in the active startup ecosystem of Kerala really helped us move in the right path. Future Lab gave us access to GPU machines at a subsdised rate when compared to its cloud alternatives at the time. Specify - the people in the ecosystem.</p>
       </div>
   </div>
   </div>
@@ -117,7 +127,7 @@
 
 <footer class="bg-dark">
   <div class="container text-center">
-             <p class="text-white mb-0 py-2">© 2021 All risghts reserved.</p>
+             <p class="text-white mb-0 py-2">© 2021 All rights reserved.</p>
          </div>
 </footer>
 
