--- a/learnings.html
+++ b/learnings.html
@@ -56,8 +56,7 @@
     <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">     
        
     <!--h4 class="media-heading">John Doe</h4-->
-        <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <p >We built Nazar - a video analytics platform to be used by business managers/dealers of gas stations in monitoring sops, acquiring customers etc</p>
       </div>
   <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
     <img src="assets/nazar.png" class="media-object" style="width:200px">
@@ -82,8 +81,7 @@
 
        <div class="col-xl-8 lg-8">
     <!--h4 class="media-heading">John Doe</h4-->
-        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <p class="text-white">We got a chance to do a pilot of our computer vision algoriothms at Attukal Pongala 2019. (Attukal Pongala is a festival held annually -specify headacount and impact.) The snap on the left is Vysakhan our product architect demonstrating the results to Manoj Abraham ADGP Kerala Police and Thiruvananthapuram district collector K Vasuki along with the other officers of Kerala Police Cyberdome.</p>
       </div>
   </div>
  
@@ -97,8 +95,7 @@
 
        <div class="col-xl-8">
     <!--h4 class="media-heading">John Doe</h4-->
-        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <p class="text-white">As part of the product Discovery Process, we had visited different gas stations of IOCL, to understand the ecosystem, conduct interviews of the different sets of user presonas we were building the product. The snap has Myself and some others from the Neuroplex team along with Ms Aditi Shukla and the entire workforce of COCO Niti Marg Delhi</p>
       </div>  
   </div>
 
@@ -119,22 +116,22 @@
   <p class="text-center">
     <ul>
        <li>
-        <h4><u><b><i>Validation</i></b></u> : Lorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</h4>
+        <h4><u><b><i>Validation</i></b></u> : The most important aspect while building a product is to validate it that its something people want and that they would pay for. Often at times the assumptios that we make about what users want  would be completely different from what they want. So in those lines the real question is how quickly and effectively can we validate our hypothesis by ensuring the minimal usage of money and other resources.</h4>
       </li>
       <li>
-        <h4><u><b><i>Validation</i></b></u> : Lorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</h4>
+        <h4><u><b><i>Talk to users : </i></b></u> : As YC always say talk to users. In the beginning stages, talking to users who are using our product or who we are targeting are the most effective thing to do.</h4>
       </li>
       <li>
-        <h4><u><b><i>Validation</i></b></u> : Lorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</h4>
+        <h4><u><b><i>Mental Health</i></b></u> : Trying to do a startup is a lonely and an overwhelming journey. There will certainly be times when your mental health will start deteriorating. When it happens, accept its happening and seek methods to address it. Dont ignore it and push it out of the priority list hoping that it will amend itself. Also prioritize being in an environment which boosts productivity and has a positive impact on your mental health, because after all prevention is better than cure. Though there are a lot of discussions on the internet regarding the mental health issues of entrepreneurs but I have found Aaron Harris ( YC Designation)’s video to be quite helpful</h4>
       </li>
       <li>
-        <h4><u><b><i>Validation</i></b></u> : Lorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</h4>
+        <h4><u><b><i>Team</i></b></u> : The Team is always the biggest asset that a startup can have.</h4>
       </li>
       <li>
-        <h4><u><b><i>Validation</i></b></u> : Lorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</h4>
+        <h4><u><b><i>People</i></b></u> : The saying that we are the average of the five people that you spend your time with is in indeed true.The reason that we were able to make it so far was because of the fact that we were fortunate enough to be in the kerala startup mission ecosystem surrounded by others who were running startups.</h4>
       </li>
       <li>
-        <h4><u><b><i>Validation</i></b></u> : Lorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</h4>
+        <h4><u><b><i>Nature Of AI Business</i></b></u> : Lorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</h4>
       </li>
 
   </ul>
@@ -149,7 +146,7 @@
 
 <footer class="bg-dark">
   <div class="container text-center">
-             <p class="text-white mb-0 py-2">© 2021 All risghts reserved.</p>
+             <p class="text-white mb-0 py-2">© 2021 All rights reserved.</p>
          </div>
 </footer>
 </body>
