added the correct notion link

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ senectus et netus et malesuada fames ac turpis egestas
             <!--div class=col-xl-6-->
           <button class ="btn btn-dark btn-lg mr-3 mt-3">Treks</button>
           <!--button class ="btn btn-dark btn-lg mr-3 mt-3">Books</button-->
-          <a href="https://www.notion.so/saviovictor/3f13e59119bd4378834ec148521f6171?v=284292c4fd8c421ca2a8f4971e5751e2" class="btn btn-dark btn-lg mr-3 mt-3" role="button">Books</a>
+          <a href="https://saviovictor.notion.site/3f13e59119bd4378834ec148521f6171?v=284292c4fd8c421ca2a8f4971e5751e2 class="btn btn-dark btn-lg mr-3 mt-3" role="button">Books</a>
           <button class ="btn btn-dark btn-lg mr-3 mt-3">My Story</button>
           <!--button class ="btn btn-dark btn-lg mr-3 mt-3">Neuroplex</button-->
           <a href="neuroplex.html" class="btn btn-dark btn-lg mr-3 mt-3" role="button">Neuroplex</a>
