changed bio, added medium link and treks

--- a/index.html
+++ b/index.html
@@ -49,24 +49,23 @@
           <div class="container"id="jumbo">
             <div class="jumbotron">
               <h1> Savio Victor</h1>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
- Maecenas porttitor congue massa. Fusce posuere, magna sed 
-pulvinar ultricies, purus lectus malesuada libero, sit amet 
-commodo magna eros quis urna. Nunc viverra imperdiet enim. 
-Fusce est. Vivamus a tellus. Pellentesque habitant morbi tristique 
-senectus et netus et malesuada fames ac turpis egestas
+              <p>Previously Co-founder & CEO at Neuroplex where we built Nazar, a computer vision platform used in gas stations. Handled, the product,sales and ops functions at Neuroplex. I love leading cross functional teams to ship products and prefer to be part of a product-led and people centric culture.</p>
+<p>At times while not building a product, I would be on a trek climbing a hill, reading a good book or watching a nice movie.<p>
+<p>Krav Maga (F1 Level Completed)</p>
+<p>Currently, recovering from an ACl tear injury on my left knee, from playing football. 
 </p>
             </div>
           </div>
         <div class="container" id="butt">
           <div class="row justify-content-center">
             <!--div class=col-xl-6-->
-          <button class ="btn btn-dark btn-lg mr-3 mt-3">Treks</button>
+          <!--button class ="btn btn-dark btn-lg mr-3 mt-3">Treks</button-->
+          <a href="https://www.notion.so/saviovictor/625255a7a3ed4f2ca746755b5a7a8945?v=cbffe5e766a54fac8a77057bb16e76a1" class="btn btn-dark btn-lg mr-3 mt-3" role="button">Treks</a>
           <!--button class ="btn btn-dark btn-lg mr-3 mt-3">Books</button-->
           <a href="https://saviovictor.notion.site/3f13e59119bd4378834ec148521f6171?v=284292c4fd8c421ca2a8f4971e5751e2" class="btn btn-dark btn-lg mr-3 mt-3" role="button">Books</a>
-          <button class ="btn btn-dark btn-lg mr-3 mt-3">My Story</button>
+          <!--button class ="btn btn-dark btn-lg mr-3 mt-3">My Story</button-->
           <!--button class ="btn btn-dark btn-lg mr-3 mt-3">Neuroplex</button-->
-          <a href="neuroplex.html" class="btn btn-dark btn-lg mr-3 mt-3" role="button">Neuroplex</a>
+          <a href="https://medium.com/@saviovictor/lessons-from-my-startup-journey-2887b3616bee" class="btn btn-dark btn-lg mr-3 mt-3" role="button">Lessons from Neuroplex</a>
 
         <!--/div-->
       </div>
